embedded ksp